# Bossa

./: .gitignore  README.md  apresentacao.ipynb  arquitetura.md  environment.yml  pyproject.toml
Testes/: DownloadMetadata.ipynb  TesteGrafo.ipynb  TesteLLM.ipynb  TesteLlamacpp.ipynb  TestePDFSearch.ipynb  TesteTQA.ipynb  TestesAgentes.ipynb  TestesFilterQdrant.ipynb  TestesVectorStore.ipynb  sql_problemas.md  utils.py
chatbot/: graph.py  interface.py  llm.py  utils.py
chatbot/tools/: open_data_search.py  pdf_reader.py  semantic_search.py  tabular_reader.py  tools.py  tools_description.yaml  utils.py
config/: SystemPrompts.yaml  model_config.yaml  paths.py
